# ROShand

./: .gitignore  vel_ref
action_node/: CMakeLists.txt  package.xml
action_node/include/: action.hpp
action_node/launch/: action.launch
action_node/paths/: path.txt
action_node/src/: action.cpp  action_node.cpp
common/keyboard_input/src/: main_keyboard.cpp
control/keyboard_control/include/keyboard_control/: keyboard_control.hpp
control/keyboard_control/src/: keyboard_control.cpp  main_keyboard_control.cpp
gp_predict/: CMakeLists.txt  package.xml
gp_predict/launch/: predict.launch
gp_predict/src/: gp_predict_node.py  predict_GPy.py  predict_pyGPs.py
gp_predict/srv/: ActionChoice.srv  getNN.srv
gripper_nodes/include/gripper_nodes/: gripper.hpp
gripper_nodes/src/: gripper.cpp
hand_simulator/config/: gazebo_position_control.yaml  hand_control.yaml  hand_effort_control.yaml  hand_position_control.yaml
hand_simulator/launch/: hand.launch  hand_control.launch  rviz_hand.launch
hand_simulator/meshes/: proximal_O.STL  proximal_O_rotated.STL
hand_simulator/param/: gripper.yaml
hand_simulator/src/: hand_node.py  my_joint_state_publisher.py  object_state_publisher.py
hand_simulator/urdf/: hand.xacro  hand_O.xacro  hand_T42.xacro  hand_copy.xacro  hand_model.gv  hand_reflex.xacro  handtest.urdf  object.urdf  table.urdf
hand_simulator/worlds/: hand.world
move_gripper/include/: move_gripper.hpp
move_gripper/src/: move_gripper.cpp
nn_predict/: CMakeLists.txt
nn_predict/src/: nn_predict_node.py  predict_nn.py
nn_predict/srv/: StateAction.srv
openhand/src/openhand/: hands.py
planner/: CMakeLists.txt  package.xml
planner/paths/: actionPath.txt  path.txt
planner/src/: myRRT.cpp  plan.cpp  planner_node.cpp
planner/srv/: plan_req.srv
play_actions_node/: CMakeLists.txt  package.xml
play_actions_node/launch/: play_actions.launch
play_actions_node/paths/: actionPath.txt  path_old.txt
play_actions_node/paths/sample_trajectories/: plan1.txt_edited  plan2.txt_edited  plan3.txt_edited  plan4.txt_edited  plan5.txt_edited  traj3.txt_edited
play_actions_node/src/: play_actions.cpp  play_actions_node.cpp
projects/dexterous_manipulation/: CMakeLists.txt
projects/dexterous_manipulation/include/dexterous_manipulation/: inhand_manipulation_manager.hpp
projects/dexterous_manipulation/launch/: cam.launch  gkeyboard.launch  hand.launch  im.launch  keyboard_record_data.launch  record_action_seq.launch
projects/dexterous_manipulation/param/: gripper.yaml  model_t42.yaml
projects/dexterous_manipulation/src/: inhand_manipulation_manager.cpp  plot_obj_pos.py  print_state.py
record_data/: CMakeLists.txt  package.xml
record_data/include/: record_data.1.hpp  record_data.hpp
record_data/launch/: record_data.launch
record_data/param/: record_continuous_data.yaml
record_data/src/: main_record_data.cpp  play_bags.cpp  record_data.1.cpp  record_data.cpp
rl_pkg/: CMakeLists.txt  package.xml
rl_pkg/launch/: ddpg_run_sim.launch  ddpg_run_transition_model.launch  pg_run_sim.launch  pilco_run_sim.launch  ppo_run_sim.launch  rl_run.launch  rl_run_sim.launch
rl_pkg/logs/: .~lock.observations_logs.csv#  checkpoint  net.ckpt.data-00000-of-00001  net.ckpt.index  observations_logs.csv  training_log.csv
rl_pkg/param/: control.yaml
rl_pkg/src/: hand_control.py  hand_control_sim.py  nngen.py  plot_obj_pos.py  policy_gradient.py  runPG.py  runPG_sim.py
rl_pkg/src/PPO/: policy_net.py  ppo.py  runPPO_sim.py  test_policy.py
rl_pkg/src/PPO/log/train/: events.out.tfevents.1539972516.arya  events.out.tfevents.1539974867.arya
rl_pkg/src/ddpg_her/: ddpg.py  runDDPG6_sim.py  runDDPG_sim.py  runDDPG_transition_model.py
rl_pkg/src/ddpg_her/log/: checkpoint  events.out.tfevents.1540497629.arya  events.out.tfevents.1542123993.arya  events.out.tfevents.1543247448.arya  events.out.tfevents.1543247517.arya  events.out.tfevents.1543247588.arya  events.out.tfevents.1543247667.arya  events.out.tfevents.1543939033.arya  net.ckpt.data-00000-of-00001  net.ckpt.index
rl_pkg/src/pilco/: controllers.py  pilco.py  pilco_node.py  plot_obj_pos_pilco.py  rewards.py
rl_pkg/src/policy_gradient/: plot_obj_pos.py  policy_gradient.py  runPG.py  runPG_sim.py
sim_transition_model/: CMakeLists.txt  package.xml
sim_transition_model/data/: checkpoint  data_info  net_transition.netxt  nn_model.ckpt.data-00000-of-00001  nn_model.ckpt.index  temp.ckpt.data-00000-of-00001
sim_transition_model/launch/: collect.launch  transition_model_sim.launch
sim_transition_model/src/: collect_data.py  gp_class.m  gp_hand_sim.py  hand_control_sim.py  nn_run.py  process_svm.py  svm_sim.py  test.py  transition_experience.py  view_data.py
sim_transition_model/srv/: action.srv
test_msg/: CMakeLists.txt  package.xml
test_msg/src/: q.py
test_node/: CMakeLists.txt  package.xml
test_node/include/: test.hpp
test_node/launch/: test.launch
test_node/src/: test.cpp  test_node.cpp
test_py_node/: CMakeLists.txt  package.xml
test_py_node/src/: test_py_node.py
track_path/: CMakeLists.txt  package.xml
track_path/launch/: track.launch  trackvs.launch
track_path/src/: track_node.py  track_vs_node.py
