<?xml version="1.0"?>
<package>
  <name>record_data</name>
  <version>1.0.0</version>
  <description>The record_data package</description>

  <maintainer email="Avishai@gmail.com">Avishai</maintainer>

  <license>AS IS</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <buildtool_depend>message_generation</buildtool_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
